current date fixed'

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <!-- day info container -->
                 <div class="top-container">
                     <h2 class="mx-3 d-flex flex-wrap "><span class="text" id="city"></span><span class="text" id="date"></span><img id="img" src=""></h2>
-                    <p class="mx-3">temp: <span id="temp">74.01</span><span>F</span></p>
+                    <p class="mx-3">temp: <span id="temp">74.01</span><span>˚F</span></p>
                     <p class="mx-3">Wind: <span id="wind">6.67</span><span>MPH</span></p>
                     <p class="mx-3">Humidity: <span id="humidity">46</span><span>%</span></p>
                     <p class="mx-3">UV index: <span class="bg-success px-2 text-white" id="uv">0.47</span></p>
